# vz

./: COMPILE  Makefile  README  select.cc  vz.h  vz_kfs.cc  vz_sector.cc
examples/: README
kfs/: .gitignore  CMakeLists.txt
kfs/scripts/: kfsshell.py  machines.cfg
kfs/src/cc/chunk/: AtomicRecordAppender.cc  CMakeLists.txt  ChunkManager.cc  ChunkServer.cc  ChunkServer.h  ChunkServer_main.cc  ClientManager.cc  ClientManager.h  ClientSM.cc  ClientSM.h  KfsOps.cc  Logger.cc  Logger.h  MetaServerSM.cc  RemoteSyncSM.cc  Utils.cc  Utils.h
kfs/webui/: server.conf
sector/: Makefile.common
sector/client/: client.cpp  client.h  clientmgmt.cpp  clientmgmt.h  dcclient.cpp  dcclient.h  fscache.cpp  fscache.h  fsclient.cpp  fsclient.h
sector/common/: #ssltransport.h#  Makefile  conf.cpp  constant.cpp  crypto.cpp  datachn.cpp  datachn.h  index.cpp  index.h  index2.cpp  index2.h  log.cpp  log.h  meta.cpp  meta.h  routing.cpp  routing.h  snode.cpp  sphere.cpp  ssltransport.cpp  ssltransport.h  sysstat.cpp  tcptransport.cpp  tcptransport.h  threadpool.h  topology.cpp  topology.h  transport.cpp  transport.h
sector/conf/: client.conf  master.conf  master_node.cert  master_node.key  replica.conf  security_node.cert  security_node.key  slave.conf  slaves.list  topology.conf
sector/examples/: .testfs.cpp.swp  testdc.cpp  text.idx.cpp  wordcount.cpp
sector/fuse/: sectorfs.cpp  sectorfs.h
sector/gmp/: Makefile  gmp.cpp  gmp.h  prec.cpp
sector/include/: conf.h  sector.h  sphere.h
sector/master/: Makefile  master.cpp  master.h  slavemgmt.cpp  slavemgmt.h  start_all.cpp  stop_all.cpp
sector/security/: filesrc.cpp  filesrc.h  security.cpp  security.h  sserver.cpp
vz/: COMPILE  LICENSE  Makefile.vz  cat.cc  cli.cc  cli.h  defs.h  main.cc  runtime.cc  version.cc  vz.1  vz_inline.h  vz_sector.cc  where.cc
(+93 files in other folders)
